[gd_scene load_steps=3 format=3 uid="uid://bdr5xxaefnqk6"]

[ext_resource type="Texture2D" uid="uid://25wpsml4jwu6" path="res://icon.svg" id="1_84p4r"]
[ext_resource type="Script" uid="uid://bw0r1cujf5mb2" path="res://scripts/song_button.gd" id="2_87opf"]

[node name="SongButton" type="TextureButton"]
custom_minimum_size = Vector2(240, 240)
offset_right = 240.0
offset_bottom = 240.0
texture_normal = ExtResource("1_84p4r")
stretch_mode = 0
script = ExtResource("2_87opf")

[node name="DetailsPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(240, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="SongName" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Song
Name"
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
